05-03-2010
----------
* Fixed minor issue with enter method to yield self, not path string
* Fixed README tutorials to use do_require method
* Added require_all convenience method

03-03-2010
----------
Added a powerful require DSL

17-11-2009
----------
Created unit tests to ensure all util functions work as expected. Fixed a number of bugs.

14-11-2009
----------
* Initial release with two helper functions:

- Require.folder(name, options)

name    : the name (or path) of a top-level folder. 
options : a hash containing specific options for applying the require (all optional)
          :include      - regular expression to match on .rb filenames to require 
          :exclude      - regular expression to match on .rb filenames to NOT require
          :recursive    - whether to do a recursive traversal of directories
          :folder_list  - list of folders under main folder (name argument) to process (in list order)
             

