@@ -1,1 +1,1 @@
-0.7.0
+0.6.1
