@@ -5,11 +5,11 @@
 
 Gem::Specification.new do |s|
   s.name = %q{require-me}
-  s.version = "0.5.6"
+  s.version = "0.6.0"
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["Kristian Mandrup"]
-  s.date = %q{2010-03-05}
+  s.date = %q{2010-03-06}
   s.description = %q{Lets you easily define how to include hierarchies of ruby files, and also apply inclusion/exclusion filters for what to include}
   s.email = %q{kmandrup@gmail.com}
   s.extra_rdoc_files = [
@@ -17,6 +17,7 @@ Gem::Specification.new do |s|
     "README.markdown"
   ]
   s.files = [
+    "lib/playground.rb",
     "lib/require-dsl.rb",
     "lib/require-me.rb",
     "lib/util/util.rb"
